# ai-shorts-factory

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: bootstrap_ace_step.ps1  bootstrap_chatterbox.ps1  bootstrap_cogvideox.ps1  bootstrap_comfyui.ps1  bootstrap_musetalk.ps1  bootstrap_temporal.ps1  bootstrap_wan.ps1  bootstrap_wan22.ps1  download_wan_weights.ps1  download_wan_weights.py  inspect_runtime.py  patch_musetalk_preprocessing.py  patch_wan22_optional_imports.py  patch_wan_attention_fallback.py  patch_wan_model_release.py  patch_wan_profiling.py  patch_wan_t5_padding.py  patch_wan_vae_runtime.py  profile_wan_smoke.ps1  profile_wan_smoke.py  resume_ace_step_download.py  run_cogvideox_smoke.ps1  run_cogvideox_smoke.py  run_full_dry_run_campaign.py  run_local_worker.py  run_musetalk_smoke.ps1  run_portrait_stability_sweep.py  run_product_readiness_campaign.py  run_quick_generate_acceptance_campaign.py  run_temporal_worker.py  run_top_subtitle_lane_sweep.py  run_wan22_smoke.ps1  run_wan22_smoke.py  run_wan_budget_ladder.py  run_wan_hero_shot_sweep.py  run_wan_smoke.ps1  run_wan_smoke.py  start_ace_step.ps1  start_chatterbox.ps1  start_comfyui.ps1  (+8 more)
tests/: test_ace_step.py  test_api.py  test_campaign_service.py  test_character_reference.py  test_chatterbox.py  test_cogvideox_runner.py  test_comfyui.py  test_gpu_lease_store.py  test_input_translation.py  test_musetalk_patch.py  test_path_display.py  test_pipeline.py  test_piper_tts.py  test_planner.py  test_planning_contract.py  test_quick_generate.py  test_settings.py  (+13 more)
(+63 files in other folders)
