[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanyo4ever-filmstudio"
version = "0.1.0"
description = "AGPL-3 workflow engine for turning screenplays into production-ready vertical AI shorts."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GNU Affero General Public License v3.0"}
keywords = ["ai video", "vertical shorts", "animation pipeline", "film studio", "workflow orchestration", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "piper-tts>=1.4,<2.0",
  "temporalio>=1.9,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[project.urls]
Homepage = "https://github.com/sanyo4ever/ai-shorts-factory"
Repository = "https://github.com/sanyo4ever/ai-shorts-factory"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
